[project]
name = "beautifulsoup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.3",
    "playwright>=1.60.0",
    "playwright-stealth>=2.0.3",
    "requests>=2.34.2",
    "uvicorn>=0.48.0",
]
